tests/characterization/snapshots/characterization__cloud_local__cloud_local_info.snap
---
source: tests/characterization/cloud_local.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
template=cloud-local
install_root=<TEST_ROOT>/xdg-data/oqtopus/cloud-local/releases
environment_name=characterization
environment_root=<TEST_ROOT>/work
created_at=2000-01-02T03:04:05Z
cloud_local_cloud_version=v1.2.3
--- stderr ---
--- end ---
