tests/characterization/snapshots/characterization__cloud_local__cloud_local_status.snap
---
source: tests/characterization/cloud_local.rs
expression: rendered
---
exit: 0
--- stdout ---
db: Running (characterization-db-1, characterization-minio-1, characterization-mc-1)
worker: Running (PID <PID>)
user_signup: Stopped
admin: Stopped
provider: Stopped
user: Stopped
--- stderr ---
--- end ---
