tests/characterization/snapshots/characterization__cloud_local__cloud_local_status_extra_argument.snap
---
source: tests/characterization/cloud_local.rs
expression: "context.render_output(&context.run_snapshot_subject([\"cloud-local\", \"status\",\n\"unexpected\"]))"
---
exit: 1
--- stdout ---
--- stderr ---
Error: oqtopus cloud-local status does not accept arguments.
--- end ---
