tests/characterization/snapshots/characterization__cloud_local__cloud_local_versions_help.snap
---
source: tests/characterization/cloud_local.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local versions <cloud|frontend|admin>
--- stderr ---
--- end ---
