tests/characterization/snapshots/characterization__cloud_local__cloud_local_versions_missing_component.snap
---
source: tests/characterization/cloud_local.rs
expression: "context.render_output(&context.run_snapshot_subject([\"cloud-local\",\n\"versions\"]))"
---
exit: 1
--- stdout ---
Usage:
  oqtopus cloud-local versions <cloud|frontend|admin>
--- stderr ---
--- end ---
